fixed some layout issues

--- a/modules/songmaker/client/css/songmaker.css
+++ b/modules/songmaker/client/css/songmaker.css
@@ -69,14 +69,12 @@
     background-color: #227be8;
 }
 
-
-
 .sidebar{
   background-color: lightgray;
   border-radius: 5px;
   float: right;
   height: 400px;
-  margin-right: -50px;
+  margin-right: 15px;
   padding: 6px;
   width: 350px;
 }
@@ -84,5 +82,5 @@
 
 /* Next three deal with the layout of the sidebar*/
 .wrapper{
-    margin-right: 300px;
+    margin-right: 0px;
 }
